home-info/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-info-dashboard
spec:
  selector:
    matchLabels:
      app: home-info
      app.service.component: dashboard
  replicas: 2
  template:
    metadata:
      labels:
        app: home-info
        app.service.component: dashboard
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              topologyKey: kubernetes.io/hostname
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - home-info
                - key: app.service.component
                  operator: In
                  values:
                  - dashboard
      containers:
      - name: home-info-dashboard
        image: jamesclonk/home-info-dashboard:153f1968b6bd354a3aef46fbc7261390e556144f
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "32Mi"
            cpu: "50m"
          limits:
            memory: "64Mi"
            cpu: "150m"
        readinessProbe:
          httpGet:
            path: /
            port: 8080
        livenessProbe:
          initialDelaySeconds: 15
          periodSeconds: 15
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 5
          httpGet:
            path: /
            port: 8080
