home-info/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: home-info-dashboard
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: home-info
    app.service.component: dashboard
